fix: update volume path for config file in Docker Compose

--- a/infrastructure/docker-compose.run.yml
+++ b/infrastructure/docker-compose.run.yml
@@ -7,4 +7,4 @@ services:
     ports:
       - "${SERVER_PORT}:8501"
     volumes:
-      - ./config.yaml:/app/config.yaml
+      - ./config.yaml:/app/app/config.yaml
