update for q4 retroperspective

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,2 +1,4 @@
 USERNAME_RT=your_usename
 BASE_URL=https://your-RT-instnace.com/REST/1.0/
+DOWNLOAD_ENABLED=true
+TICKETS_DETAILS_BASE_URL=https://your-RT-instnace.com/Ticket/Display.html
